--- a/Tex/src-SPAA/macros.tex
+++ b/Tex/src-SPAA/macros.tex
@@ -36,17 +36,21 @@
 \newcommand{\reqII}{\textbf{LPR2}\xspace}
 
 %---------Evaluation Macros-----------------------%
-\newcommand{\autoTree}{Auto-Tree\xspace}
-\newcommand{\autoTreap}{Auto-Treap\xspace}
-\newcommand{\autoSkiplist}{Auto-Skiplist\xspace}
+\newcommand{\autoTree}{LR-Tree\xspace}
+\newcommand{\autoTreap}{LR-Treap\xspace}
+\newcommand{\autoSkiplist}{LR-Skiplist\xspace}
 \newcommand{\danaTree}{LO-Tree\xspace}
 \newcommand{\danaAVL}{LO-AVL\xspace}
 \newcommand{\bronson}{Snap-Tree\xspace}
+\newcommand{\friendly}{CF-Tree\xspace}
 \newcommand{\skiplist}{Java-Skiplist\xspace}
+\newcommand{\lockfreeTree}{LF-Tree\xspace}
 \newcommand{\globalTree}{Global-Tree\xspace}
 \newcommand{\globalTreap}{Global-Treap\xspace}
 \newcommand{\domTree}{Lock-Tree\xspace}
 \newcommand{\domTreap}{Lock-Treap\xspace}
+\newcommand{\stmTree}{STM-Tree\xspace}
+\newcommand{\stmTreap}{STM-Treap\xspace}
 \newcommand{\domSkiplist}{Lock-Skiplist\xspace}
 \newcommand{\getOP}{\textsc{get}\xspace}
 
