--- a/Tex/src-SPAA/myRef.bib
+++ b/Tex/src-SPAA/myRef.bib
@@ -261,6 +261,14 @@ howpublished= "\url{http://code.google.com/p/leveldb}"
   pages     = {196--205},
 }
 
+@inproceedings{Gramoli2015,
+  author    = {Vincent Gramoli},
+  title     = {More Than You Ever Wanted to Know about Synchronization: Synchrobench, Measuring the Impact of the Synchronization on Concurrent Algorithms},
+  booktitle = {PPoPP},
+  year      = {2015},
+  note      = {to appear},
+}
+
 @InProceedings{LevAriCK2014,
   author = 	 {Kfir Lev-Ari and
 			  Gregory Chockler and
@@ -637,3 +645,5 @@ howpublished= "\url{docs.oracle.com/javase/7/docs/api/java/util/concurrent/Concu
  publisher = {John Wiley \& Sons, Inc.},
  address = {New York, NY, USA},
 }
+
+
