--- a/Tex/src-SPAA/proof-appendix.tex
+++ b/Tex/src-SPAA/proof-appendix.tex
@@ -28,7 +28,7 @@ In other words, a sequential execution is a sequence of operation executions.
 
 Two executions are \emph{indistinguishable} to a set of operations if each
 operation in the set executes the same steps on shared objects, and
-receives the same value from those objects, in both executions. A step $\tau$
+gets the same value from those objects, in both executions. A step $\tau$
 by operation $op$ is \emph{invisible} to all other operations 
 if the executions with and without $\tau$ are indistinguishable to
 $\op\setminus \{op\}$. For example, read steps are invisible.
@@ -37,7 +37,7 @@ $\op\setminus \{op\}$. For example, read steps are invisible.
 
 The correctness of a data structure is defined in terms of its external behavior, as reflected in values returned by invoked operations.
 Correctness of a code transformation is proven by showing that the synthesized code's executions are equivalent to ones of the original code,
-where two executions are  \emph{equivalent} if every thread invokes the same
+where two executions are  \emph{equivalent} if when considering operations that have completed every thread invokes the same
 operations in the same order  in both executions, and gets the same result for each operation. More formally, we say in this paper that a code transformation is \emph{correct} if every execution of the transformed code
 is equivalent to some execution of the original code.
 
@@ -57,14 +57,13 @@ This is because our code transformation uses timeouts and exception handlers to 
 We consider a finite execution $\pi$ of the transformed
 code, and find an equivalent execution of the original lock-based
 code.
-Each operation in $\pi$ is an interleaved sequence of read-only phases and validation phases followed by a (single) update phase -- or a prefix of such pattern.
+Each operation in $\pi$ is an interleaved sequence of read-only and validation phases followed by a (single) update phase, or a prefix of such pattern.
 For each operation in $\pi$ we consider its \emph{successful validation}, i.e.,
-the last (successful) execution of a validation phase when switching from the read-only
-phase to the update phase. Each operation executes at most one successful 
-validation. The (complete) read-only phase preceding the successful
+the last (successful) execution of a validation phase before switching to the update phase. Each operation executes at most one successful 
+validation. The read-only phase preceding the successful
 validation phase is called \emph{successful read-only
 phase} .
-Note that each operation executes at most one successful read-only
+Each operation executes at most one successful read-only
 phase.
 Towards proving equivalence to the original code execution, for each operation $op$, we remove the prefix of $op$ that precedes the successful read-only phase.
 This includes completely removing operations that have no successful read-only phase.
@@ -72,10 +71,9 @@ We call the resulting execution $\hat{\pi}$.
 %Finally, we remove all validation phases executed during the successful
 %read-only phase that are not the unique successful  validation phase of
 %the operation.
-These prefixes include read steps as well as tryLock and
+The removed prefixes include read steps as well as tryLock and
 unlock steps.
-Removing read steps is invisible to other processes. Since we remove all tryLock steps that have failed to acquire locks, 
-all remaining tryLock are successful also in $\hat{\pi}$. In addition, since the operation discards all local (private) state when restarting the read-only phase, $\pi$ and $\hat{\pi}$ are indistiguishable to all operations that have completed in $\pi$.
+Removing read steps is invisible to other processes. Since we only remove steps that acquire locks all remaining locking steps in $\hat{\pi}$ have the same affect and get the same response (success or failure) as in $\pi$. Finally, since the operation discards all local (private) state when restarting a read-only phase, $\pi$ and $\hat{\pi}$ are indistiguishable to all operations that have completed in $\pi$.
 \begin{claim}
 \label{claim:pipihat}
 $\pi$ and $\hat{\pi}$ are equivalent.
@@ -86,7 +84,8 @@ the read set validation in the execution of successful validation
 phases, by their order in $\hat{\pi}$, where $e_i$ is a step of the operation $op_{i}$ executed by process $p_{i}$.
 (Possibly $p_i=p_j$ for $j \neq i$).
 
-For every operation $op_{i}$, consider the partition of $\hat{\pi}$ to
+Let \op\ be the set of operations in $\hat{\pi}$.
+For every operation $op_{i}$ in \op, consider the partition of $\hat{\pi}$ to
 the following intervals $\hat{\pi}=\alpha_i\beta_i\gamma_i$, such that
 $\alpha_i$ includes the execution interval of $op_{i}$'s (successful) read-only phase
 (denote $op_{i}$'s read set $rs_{i}$); $\beta_i=\beta_{i_1}\beta_{i_2}$, is the
@@ -96,10 +95,9 @@ locks on its lock set, denoted $ls_{i}$;
 $e_i$ is the first step of $\beta_{i_2}$, namely the read set validation
 interval.
 
-Let \op\ be the set of operations in $\hat{\pi}$.
-The next claim follows from the fact that the validation phase of $op_{i}$
-in $\beta_i$ is successful, and includes locks and versions
-re-validation: 
+%The next claim follows from the fact that the validation phase of $op_{i}$
+%in $\beta_i$ is successful, and includes locks and versions
+%re-validation: 
 %\eshcar{need to prove these? or are these clear from the alg description?}
 
 \begin{claim}
@@ -108,7 +106,12 @@ No operation in $\op\setminus\{op_{i}\}$ holds a lock in
 $\alpha_i\beta_{i_1}$ that is associated with an object $obj$ in $rs_{i}$ after $op_{i}$'s first
 read of $obj$ in $\alpha_i$.
 \end{claim}
+\begin{proof}
+Let $lck$ be the lock associated with $obj$. Before reading $obj$ the first time in $\alpha_i$ $op_i$ records the version number of $lck$ (line~\ref{code:track:getVersion} in function \emph{track}) and checks that $lck$ is not held by any other thread (line~\ref{code:track:verifyUnlocked} in function \emph{track}).
 
+We assume each locking instruction has a write fence and that at the beginning of the validation phase there is a read fence. If another thread acquired $lck$ after the first read and did not release it, the fencing guarantees that this is discovered during validation (line~\ref{code:validate:verifyUnlocked} in function \emph{validateReadSet}). If another thread acquired $lck$ after the first read and did release the lock, then the thread increased the version number of $lck$ before releasing it. Again, the fencing guarantees that $op_i$ observes the version number has changed (line~\ref{code:validate:verifyVersion} in function \emph{validateReadSet}). Since the validation phase of $op_i$ is successful no operation other than $op_i$ holds $lck$ in
+$\alpha_i\beta_{i_1}$.
+\end{proof}
 
 We next project
 object versions out of $\hat{\pi}$'s configurations, and remove all accesses (reads and writes) to object versions.
@@ -139,17 +142,19 @@ There is an execution of lock-based algorithm that is equivalent to $\pi'$.
 \begin{proof}
 We start with the execution $\pi_0=\pi'$.
 For every $i \geq 0$, we show how to perturb $\pi_i$ to
-obtain an execution $\pi_{i+1}$. For each $j\geq i+1$, let
+obtain an execution $\pi_{i+1}$. 
+We consider the operations $\op=op_1, \ldots, \op_k$ as defined above by the steps $e_1, e_2, \ldots, e_k$ .
+For an operation $op_j$ such that $j\geq i+1$ in $\pi_i$, let
   $\beta_{j}^{'}=\beta_{j_1}^{'}\beta_{j_2}^{'}$ be the minimal interval
-  containing $op_{j}$'s validation phase in $\pi_{i+1}$, where $\beta_{j_1}^{'}$
+  containing $op_{j}$'s validation phase, where $\beta_{j_1}^{'}$
   is the minimal interval containing $op_{j}$'s tryLock phase.
   Denote the configuration between $\beta_{j_1}^{'}$ and $\beta_{j_2}^{'}$
-  $C_{j}$. In $\pi_{i+1}$ the following conditions are
+  $C_{j}$. In $\pi_{i}$ the following conditions are
 satisfied:
 \begin{enumerate}
-  \item \label{cond:lp} The operations $op_{1},\ldots,op_{i}$ follow the
+  \item \label{cond:lp} The operations $op_{1},\ldots,op_{i}$ execute the
   fully-pessimistic locking algorithm, while the rest of the operations
-  $\opt_{i+1}=\op\setminus\{op_{1},\ldots,op_{i}\}$ proceed according to our
+  $\opt_{i}=\op\setminus\{op_{1},\ldots,op_{i-1}\}$ execute our
   semi-optimistic algorithm.
   \item \label{cond:locks} 
   For $j\geq i+1$, no operation in $\op\setminus\{op_{j}\}$ holds a lock in
@@ -162,30 +167,29 @@ satisfied:
   For $j\geq i+1$, all try-lock steps by $op_j$ are invisible to
   $\op\setminus\{op_{j}\}$.
   %after $op_{j}$'s last read $obj$ before $\beta_j^{'}$
-  \item \label{cond:equiv} $\pi'$ and $\pi_{i+1}$ are equivalent.
+  \item \label{cond:equiv} $\pi'$ and $\pi_{i}$ are equivalent.
 \end{enumerate}
 
-For $\opt_{k+1}=\emptyset$, we get an execution where all operations follow the
+For $\opt_{k}=\emptyset$, we get an execution where all operations execute the
 pessimistic locking algorithm, and by Condition~\ref{cond:equiv} $\pi_{k+1}$ is
 equivalent to $\pi'$ and we are done.
 
 The proof is by induction on $i$. For the base case we consider
-the execution $\pi'=\pi_0$. Condition~\ref{cond:lp} holds since none of
-the operations in this execution follow the full locking algorithm.
+the execution $\pi_0$. Condition~\ref{cond:lp} holds since none of
+the operations in this execution execute the full locking algorithm.
 Conditions~\ref{cond:locks} and~\ref{cond:writes} hold by
 Claim~\ref{claim:locks}, 
 and since accesses to objects (other than versions) are similar in $\hat{\pi}$ and
-$\pi'$. Condition~\ref{cond:trylocks} holds since by construction, in $\pi'$ every step accessing an object, either
+$\pi_0$. Condition~\ref{cond:trylocks} holds since by construction, in $\pi_0$ every step accessing an object, either
 for locking it or for validating it is not locked, finds the object not locked.
-.
 Condition~\ref{cond:equiv} vacuously holds since $\pi'$ and $\pi_0$ are the
 same execution.
 
 For the induction step, assume $\opt_i \neq \emptyset$ and
 the execution
-$\pi_i=\alpha_i^{'}\beta_{i_1}^{'}\beta_{i_2}^{'}\gamma_i^{'}$ satisfies
+$\pi_i$ satisfies
 the above conditions.
-We replace $\pi_i$ with
+We consider $op_i \in \opt_i$ which partitions $\pi_i$ to $\alpha_i^{'}\beta_{i_1}^{'}\beta_{i_2}^{'}\gamma_i^{'}$. We replace $\pi_i$ with
 $\pi_{i+1}=\alpha_i^{''}\beta_{i_1}^{''}\delta_i\beta_{i_2}^{''}\gamma_i^{'}$,
 such that $\alpha_i^{''}$, $\beta_{i_1}^{''}$, and $\beta_{i_2}^{''}$ are the
 projection of $\alpha_i^{'}$, $\beta_{i_1}^{'}$ and $\beta_{i_2}^{'}$, excluding
@@ -207,6 +211,8 @@ $op_{i}$ first read $obj$ before $C_{i}$, hence $op_{i}$ reads the same
 values in its read set in $\pi_i$ and $\pi_{i+1}$. After $\delta_{i}$,
 $op_{i}$ holds the locks on all objects in $ls_i$, hence it can continue with
 the execution of the locking algorithm.
+This implies that the projection of the execution $\pi_{i+1}$ on $op_{i}$
+follows the full pessimistic locking algorithm satisfying Condition~\ref{cond:lp}.
 
 In $\alpha_i^{''}\beta_{i_1}^{''}$ we only removed read steps and tryLock steps
 by $op_{i}$ that are invisible to all other operations, by
@@ -221,9 +227,7 @@ and $\alpha_i^{''}\beta_{i_1}^{''}\delta_i\beta_{i_2}^{''}\gamma_i^{'}$ are
 indistinguishable to all operations in $\op\setminus\{op_{i}\}$. 
 
 The indistinguishability and the induction hypothesis imply that Conditions~\ref{cond:locks},~\ref{cond:writes},~\ref{cond:trylocks} hold.
-In addition, this implies that (1)~the projection of the execution $\pi_{i+1}$ on $op_{i}$
-follows the full pessimistic locking algorithm satisfying Condition~\ref{cond:lp}, and
-(2)~all operations return the same value in $\pi_{i+1}$ as in $\pi'$, which
+In addition, this implies that all completed operations return the same value in $\pi_{i+1}$ and $\pi'$, which
 means Condition~\ref{cond:equiv} holds.
 
 %It is left to show that $\pi_{i+1}$ satisfies
