--- a/Tex/src-SPAA/evaluation2.tex
+++ b/Tex/src-SPAA/evaluation2.tex
@@ -195,6 +195,14 @@ keys (Figure~\ref{evaluation:results:skiplist}).
 \label{evaluation:results:unbalanced}
 \end{figure*}
 
+\begin{figure*}
+\begin{center}
+\input{plots/unbalanced3small}
+\end{center}
+\caption{Throughput of unbalanced data structures. Small Tree. }
+\label{evaluation:results:unbalanced}
+\end{figure*}
+
 
 \begin{figure*}
 \begin{center}
@@ -204,6 +212,16 @@ keys (Figure~\ref{evaluation:results:skiplist}).
 structures.}
 \label{evaluation:results:balanced}
 \end{figure*}
+
+\begin{figure*}
+\begin{center}
+\input{plots/balanced3small}
+\end{center}
+\caption{Throughput of balanced data
+structures. Small Tree.}
+\label{evaluation:results:balanced}
+\end{figure*}
+
 
 \begin{figure*}
 	\begin{center}
