--- a/Tex/src-SPAA/plotsStyle.tex
+++ b/Tex/src-SPAA/plotsStyle.tex
@@ -32,7 +32,7 @@
 \pgfplotsset{unbalanced/.style={%
 	   width=0.35\textwidth,
        legend columns=-1,
-	   legend entries={\autoTree, \lockfreeTree, \stmTree, \domTree, },
+	   legend entries={\autoTree, \danaTree ,\lockfreeTree, \stmTree, \domTree, },
 	   legend to name=unbalancedLegened,
 }}
 
