--- a/Tex/src-SPAA/macros.tex
+++ b/Tex/src-SPAA/macros.tex
@@ -44,6 +44,7 @@
 \newcommand{\bronson}{Snap-Tree\xspace}
 \newcommand{\friendly}{CF-Tree\xspace}
 \newcommand{\skiplist}{Java-Skiplist\xspace}
+\newcommand{\kary}{k-Tree\xspace}
 \newcommand{\lockfreeTree}{LF-Tree\xspace}
 \newcommand{\globalTree}{Global-Tree\xspace}
 \newcommand{\globalTreap}{Global-Treap\xspace}
@@ -51,6 +52,7 @@
 \newcommand{\domTreap}{Lock-Treap\xspace}
 \newcommand{\stmTree}{STM-Tree\xspace}
 \newcommand{\stmTreap}{STM-Treap\xspace}
+\newcommand{\stmSkiplist}{STM-Skiplist\xspace}
 \newcommand{\domSkiplist}{Lock-Skiplist\xspace}
 \newcommand{\getOP}{\textsc{get}\xspace}
 
