--- a/Tex/src-SPAA/proof-appendix.tex
+++ b/Tex/src-SPAA/proof-appendix.tex
@@ -109,7 +109,7 @@ read of $obj$ in $\alpha_i$.
 \begin{proof}
 Let $lck$ be the lock associated with $obj$. Before reading $obj$ the first time in $\alpha_i$ $op_i$ records the version number of $lck$ (line~\ref{code:track:getVersion} in function \emph{track}) and checks that $lck$ is not held by any other thread (line~\ref{code:track:verifyUnlocked} in function \emph{track}).
 
-We assume each locking instruction has a write fence and that at the beginning of the validation phase there is a read fence. If another thread acquired $lck$ after the first read and did not release it, the fencing guarantees that this is discovered during validation (line~\ref{code:validate:verifyUnlocked} in function \emph{validateReadSet}). If another thread acquired $lck$ after the first read and did release the lock, then the thread increased the version number of $lck$ before releasing it. Again, the fencing guarantees that $op_i$ observes the version number has changed (line~\ref{code:validate:verifyVersion} in function \emph{validateReadSet}). Since the validation phase of $op_i$ is successful no operation other than $op_i$ holds $lck$ in
+We assume the function \emph{isLockedByAnother} imposes a memory fence and that at the beginning of the validation phase there is a read fence. If another thread acquired $lck$ after the first read and did not release it, this is discovered during validation (line~\ref{code:validate:verifyUnlocked} in function \emph{validateReadSet}). If another thread acquired $lck$ after the first read--and therefore after reading the version the first time---and did release the lock, then this thread increased the version number of $lck$ before releasing it. The fencing guarantees that $op_i$ observes the version number has changed (line~\ref{code:validate:verifyVersion} in function \emph{validateReadSet}). Since the validation phase of $op_i$ is successful no operation other than $op_i$ holds $lck$ in
 $\alpha_i\beta_{i_1}$.
 \end{proof}
 
