k-ary and Deuce bib items

--- a/Tex/src-SPAA/myRef.bib
+++ b/Tex/src-SPAA/myRef.bib
@@ -646,4 +646,19 @@ howpublished= "\url{docs.oracle.com/javase/7/docs/api/java/util/concurrent/Concu
  address = {New York, NY, USA},
 }
 
+@inproceedings{Deuce2010
+, author = "Felber, P., G. Korland, and N. Shavit "
+, title = "{Deuce}: Noninvasive concurrency with a {Java STM}"
+, booktitle = {MULTIPROG}
+, year = 2010
+} 
 
+@inproceedings{BrownA12,
+  author = {Brown, Trevor and Avni, Hillel},
+  booktitle = {OPODIS},
+ year = {2012},
+ pages = {31--45},
+ title = {Range Queries in Non-blocking k-ary Search Trees},
+
+  
+}
