--- a/Tex/src-SPAA/plots/unbalanced3small.tex
+++ b/Tex/src-SPAA/plots/unbalanced3small.tex
@@ -6,7 +6,7 @@ ylabel = { million ops/sec}]
 {results/trees-i1000000-u100.log}; 
 \addplot [orange,mark=diamond] table [x={threads}, y={LogicalOrderingTree}]
 {results/trees-i10000-u100.log}; 
-\addplot [darkspringgreen,mark=triangle] table [x={threads}, y={NonBlockingTorontoBSTMap}]
+\addplot [blues5,mark=10-pointed star] table [x={threads}, y={NonBlockingTorontoBSTMap}]
 {results/trees-i10000-u100.log}; 
 \addplot [magenta,mark=+] table [x={threads}, y={STMBinaryTree}]
 {results/trees-i10000-u100.log};
@@ -20,7 +20,7 @@ ylabel = { million ops/sec}]
 {results/trees-i10000-u50.log}; 
 \addplot [orange,mark=diamond] table [x={threads}, y={LogicalOrderingTree}]
 {results/trees-i10000-u50.log}; 
-\addplot [darkspringgreen,mark=triangle] table [x={threads}, y={NonBlockingTorontoBSTMap}]
+\addplot [blues5,mark=10-pointed star] table [x={threads}, y={NonBlockingTorontoBSTMap}]
 {results/trees-i10000-u50.log}; 
 \addplot [magenta,mark=+] table [x={threads}, y={STMBinaryTree}]
 {results/trees-i10000-u50.log};
@@ -35,7 +35,7 @@ title= { \textbf{read-only}}]
 {results/trees-i10000-u0.log};
 \addplot [orange,mark=diamond] table [x={threads}, y={LogicalOrderingTree}]
 {results/trees-i10000-u0.log};  
-\addplot [darkspringgreen,mark=triangle] table [x={threads}, y={NonBlockingTorontoBSTMap}]
+\addplot [blues5,mark=10-pointed star] table [x={threads}, y={NonBlockingTorontoBSTMap}]
 {results/trees-i10000-u0.log}; 
 \addplot [magenta,mark=+] table [x={threads}, y={STMBinaryTree}]
 {results/trees-i10000-u0.log};
