--- a/Tex/src-SPAA/plots/update1000.tex
+++ b/Tex/src-SPAA/plots/update1000.tex
@@ -4,15 +4,18 @@
  ylabel = { million ops/sec},
  %title={\textbf{0\% read-only}}]
  ]
-\addplot [black,mark=square*] table [x={threads}, y={TimeoutSkiplist}]
-{results/update1000.txt}; 
-\addplot [darkspringgreen,mark=triangle] table [x={threads}, y={Bronson}]
-{results/update1000.txt}; 
-\addplot [coralred,mark=asterisk] table [x={threads}, y={JavaSkipList}]
-{results/update1000.txt};
-\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingSkiplist}]
-{results/update1000.txt};
+\addplot [black,mark=square*] table [x={threads}, y={LockRemovalSkipList}]
+{results/update10001.txt}; 
+\addplot [violet,mark=o] table [x={threads}, y={LockFreeKSTRQ}]
+{results/update10001.txt}; 
+\addplot [teal,mark=pentagon] table [x={threads}, y={LockFreeJavaSkipList}]
+{results/update10001.txt};
+\addplot [magenta,mark=+] table [x={threads}, y={STMSkipList}]
+{results/update10001.txt};
+\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingSkipList}]
+{results/update10001.txt};
 \end{axis}
+
 \end{tikzpicture}
 
 %\ref{skiplistLegened}
