--- a/Tex/src-SPAA/plots/range.tex
+++ b/Tex/src-SPAA/plots/range.tex
@@ -4,14 +4,16 @@
  ylabel = { million ops/sec},
  %title={\textbf{0\% read-only}}]
  ]
-\addplot [black,mark=square*] table [x={threads}, y={TimeoutSkiplist}]
-{results/range.txt}; 
-\addplot [darkspringgreen,mark=triangle] table [x={threads}, y={Bronson}]
-{results/range.txt}; 
-\addplot [coralred,mark=asterisk] table [x={threads}, y={JavaSkipList}]
-{results/range.txt};
-\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingSkiplist}]
-{results/range.txt};
+\addplot [black,mark=square*] table [x={threads}, y={LockRemovalSkipList}]
+{results/range1.txt}; 
+\addplot [violet,mark=o] table [x={threads}, y={LockFreeKSTRQ}]
+{results/range1.txt}; 
+\addplot [teal,mark=pentagon] table [x={threads}, y={LockFreeJavaSkipList}]
+{results/range1.txt};
+\addplot [magenta,mark=+] table [x={threads}, y={STMSkipList}]
+{results/range1.txt};
+\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingSkipList}]
+{results/range1.txt};
 \end{axis}
 \end{tikzpicture}
 
